--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,8 +88,6 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava3:2.9.0"
     implementation("com.squareup.moshi:moshi-kotlin:1.12.0")
 
-    implementation "androidx.multidex:multidex:2.0.1"
-
     implementation('com.squareup.picasso:picasso:2.71828')
 
     implementation("io.reactivex.rxjava3:rxkotlin:3.0.1")
@@ -104,4 +102,6 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-rxjava3:2.3.0"
+
+    implementation "com.github.chrisbanes:PhotoView:2.3.0"
 }
